Update military personnel data in HTML file
escala dejem alterada

--- a/deepseek_html_20250917_45b23e.html
+++ b/deepseek_html_20250917_45b23e.html
@@ -299,7 +299,7 @@
     <script>
         // Dados de exemplo (em uma aplicação real, viriam do Google Sheets)
         let militares = [
-            { id: 1, nome: "Capitão Silva", anosPolicia: 15, escalasMes: 2 },
+            { id: 1, nome: "Daniel Evangelista", anosPolicia: 15, escalasMes: 2 },
             { id: 2, nome: "Tenente Oliveira", anosPolicia: 8, escalasMes: 1 },
             { id: 3, nome: "Sargento Santos", anosPolicia: 12, escalasMes: 3 },
             { id: 4, nome: "Cabo Pereira", anosPolicia: 5, escalasMes: 0 },
